--- a/ModuleT1/main/default/classes/AccountCreationTest.cls
+++ b/ModuleT1/main/default/classes/AccountCreationTest.cls
@@ -3,7 +3,7 @@ public class AccountCreationTest
 {
   static testMethod void testInsertAccount() //check the difference
   {
-  //Comment - Testing differences
+  //Comment 
   AccountCreation ca = new AccountCreation();
   ca.createAccount('TestAcc1');
   
