--- a/DXFM-Userstory4/main/default/classes/AccountCreation.cls
+++ b/DXFM-Userstory4/main/default/classes/AccountCreation.cls
@@ -2,7 +2,7 @@ public Class AccountCreation
 {
 public Account createAccount(String name) //Method to Create Account abc
 {
-//Comment - Testing differences - jira test1
+//Comment - Testing differences - dx demo
 Account acc = new Account(); 
 acc.Name = name;
 system.debug('Test');
