--- a/DXFM-Userstory4/main/default/classes/AccountCreationTest.cls
+++ b/DXFM-Userstory4/main/default/classes/AccountCreationTest.cls
@@ -3,7 +3,7 @@ public class AccountCreationTest
 {
   static testMethod void testInsertAccount() //check the difference
   {
-  //Comment - Testing differences - jira test1
+  //Comment - Testing differences - dx demo
   AccountCreation ca = new AccountCreation();
   ca.createAccount('TestAcc1');
   
